<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="APP_NAME">Beautiful Android on a Shoestring</string>

    <!--Rectangles-->
    <string name="RECTANGLE_EXPLANATION">Rectangle drawn using XML</string>
    <string name="ROUNDED_RECTANGLE_EXPLANATION">Rounded rectangle (bounded width)</string>
    <string name="GRADIENT_RECTANGLE_EXPLANATION">Standard and angled gradients</string>
    <string name="START_TEXT_BUTTON_TEXT">Show Text\nExamples</string>
    <string name="BUTTON_EXPLANATION">Uses button state and text state\ndrawables to react to user input.</string>

    <!--Text-->
    <string name="GRADIENT_TEXT">Text Gradient</string>
    <string name="ANGLED_GRADIENT_TEXT">Angled Gradient</string>
    <string name="SHADOW_TEXT">Shadow Text</string>
    <string name="CUSTOM_FONT_TEXT">Custom Font</string>
    <string name="START_ICON_BUTTON_TEXT">Show Icon\nExamples</string>

    <!--Icons-->
    <string name="ICON_ANDROID">A</string>
    <string name="ICON_CAMERA">C</string>
    <string name="ICON_MUSIC">M</string>
    <string name="ICON_LEAF">L</string>
    <string name="ICON_EXPLANATION">Icons use a custom icon font from icomoon (asset: icomoon.ttf). It\'s a way to fake vector graphics on Android.</string>
    <string name="ICON_EXPLANATION2">Uses a custom view component to show the text (IconTextView.java). Click the icon to see the letters that are assigned for each icon.</string>
    <string name="BACKGROUND_EXPLANATION">*Uses a tiled background</string>
</resources>
