<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchVerticalCentered">

    <!--Text with shadow-->
    <TextView
        android:text="@string/SHADOW_TEXT"
        style="@style/ShadowText"/>

    <!--Gradient text-->
    <TextView
        android:id="@+id/gradient_text"
        android:text="@string/GRADIENT_TEXT"
        style="@style/LargeText"/>

    <!--Angled gradient text-->
    <TextView
        android:id="@+id/angled_gradient_text"
        android:text="@string/ANGLED_GRADIENT_TEXT"
        style="@style/LargeText"/>

    <!--Custom font-->
    <TextView
        android:id="@+id/custom_font_text_view"
        android:text="@string/CUSTOM_FONT_TEXT"
        style="@style/LargeText"/>

    <!--Button-->
    <Button
        android:id="@+id/icon_button"
        android:text="@string/BUTTON_TEXT"
        style="@style/Button"/>
</LinearLayout>
